--- a/FOG/res/values/styles.xml
+++ b/FOG/res/values/styles.xml
@@ -11,10 +11,16 @@
             backward-compatibility can go here.
         -->
     </style>
-
+	    <style name="btn_large_black">
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
 
 </resources>
