--- a/FOG/res/layout/fragment_menu.xml
+++ b/FOG/res/layout/fragment_menu.xml
@@ -3,16 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_news"
-        style="@style/btn_large_black"
+    <ListView
+        android:id="@+id/listView2"
         android:layout_width="match_parent"
-        android:layout_height="77dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btn_public_events"
-        android:layout_marginTop="20dp"
-        android:drawableLeft="@drawable/ic_news"
-        android:text="@string/btn_news" />
+        android:layout_below="@+id/tw_events" >
+
+    </ListView>
 
     <Button
         android:id="@+id/btn_public_events"
@@ -21,20 +20,20 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/btn_private_party"
-        android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/ic_event"
+        android:onClick="onClick"
         android:text="@string/btn_publicevent" />
 
     <Button
-        android:id="@+id/btn_private_party"
+        android:id="@+id/btn_news"
         style="@style/btn_large_black"
         android:layout_width="match_parent"
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:drawableLeft="@drawable/ic_party"
-        android:text="@string/btn_privateparty" />
+        android:layout_below="@+id/btn_public_events"
+        android:drawableLeft="@drawable/ic_news"
+        android:onClick="onClick"
+        android:text="@string/btn_news" />
 
     <Button
         android:id="@+id/btn_profil_settings"
@@ -43,26 +42,28 @@
         android:layout_height="77dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/btn_news"
-        android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/ic_settings"
+        android:onClick="onClick"
         android:text="@string/btn_profil_settings" />
-
-    <ListView
-        android:id="@+id/listView2"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="25dp" >
-    </ListView>
 
     <TextView
         android:id="@+id/tw_events"
         style="@style/btn_large_black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/listView1"
         android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btn_profil_settings"
         android:text="@string/tw_registered_events" />
+
+    <Button
+        android:id="@+id/btn_private_party"
+        style="@style/btn_large_black"
+        android:layout_width="match_parent"
+        android:layout_height="77dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:drawableLeft="@drawable/ic_party"
+        android:onClick="onClick"
+        android:text="@string/btn_privateparty" />
 
 </RelativeLayout>
